// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChiselEndcapElement > render > Non-Button Rendering > should render a basic chisel endcap path with default direction "right" 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
          <g id="",
    "">
            ",
    "
            ",
    "
          </g>
        ",
  ],
  "values": [
    "ce-render",
    {
      "_$litType$": 2,
      "strings": [
        "
          <path
            id="",
        "__shape"
            d=",
        "
            fill=",
        "
            stroke=",
        "
            stroke-width=",
        "
          />
        ",
      ],
      "values": [
        "ce-render",
        "MOCK_PATH_chisel_right_40x20_at_5,10",
        "none",
        "none",
        "0",
      ],
    },
    null,
  ],
}
`;

exports[`ChiselEndcapElement > render > Non-Button Rendering > should render with direction "left" from props 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
          <g id="",
    "">
            ",
    "
            ",
    "
          </g>
        ",
  ],
  "values": [
    "ce-render",
    {
      "_$litType$": 2,
      "strings": [
        "
          <path
            id="",
        "__shape"
            d=",
        "
            fill=",
        "
            stroke=",
        "
            stroke-width=",
        "
          />
        ",
      ],
      "values": [
        "ce-render",
        "MOCK_PATH_chisel_left_40x20_at_5,10",
        "none",
        "none",
        "0",
      ],
    },
    null,
  ],
}
`;

exports[`ChiselEndcapElement > render > Non-Button Rendering > should render with specified fill, stroke, strokeWidth from props 1`] = `
{
  "_$litType$": 2,
  "strings": [
    "
          <g id="",
    "">
            ",
    "
            ",
    "
          </g>
        ",
  ],
  "values": [
    "ce-render",
    {
      "_$litType$": 2,
      "strings": [
        "
          <path
            id="",
        "__shape"
            d=",
        "
            fill=",
        "
            stroke=",
        "
            stroke-width=",
        "
          />
        ",
      ],
      "values": [
        "ce-render",
        "MOCK_PATH_chisel_right_30x15_at_0,0",
        "red",
        "blue",
        "2",
      ],
    },
    null,
  ],
}
`;
